# Outage-Watch

./: .gitignore  404.html  LICENSE  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  settings.ini  setup.py  sitemap.xml
.github/workflows/: update.yml
batch_scripts/: _test.html  launch_lab.bat  publish_docs.bat  pypi_publish.bat  serve_docs.bat  setup_env.bat  update_env.bat
data/: outage_locations.json  outages.csv
data/raw/: enw_incidents_info.json  np_incidents_info.json  sp_incidents_info.json  ssen_incidents_info.json  ukpn_incidents_info.json  wpd_incidents_info.json
docs/: index.md  map.js
docs/data/: outages.csv
nbs/: 01-retrieval.ipynb  02-collation.ipynb  03-deployment.ipynb
nbs/archive/: 02-collation.ipynb
outage/: _nbdev.py  collation.py  deployment.py  retrieval.py
search/: search_index.json
templates/: index_md.j2  map_js.j2
